--- a/main.css
+++ b/main.css
@@ -14,42 +14,44 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 50vh;
+    height: 25vh;
 }
 
 .flex-containerB{
     display: flex;
-    align-items: center;
+    align-items: top;
     justify-content: space-between;
-    height: 20vh;
+    height: 4vh;
     background-color: #FFE0E0;
+    
 }
 .flex-containerC{
     display: flex;
-    align-items: center;
+    flex-basis: 0 0 33.3333%;
+    align-items: top;
     justify-content: space-between;
-    height: 20vh;
+    height: 16vh;
     background-color: #FFE0E0;
 }
 
 .flex-containerD{
     display: flex;
-    align-items: center;
+    align-items: top;
     justify-content: space-between;
-    height: 20vh;
+    height: 12.5vh;
     background-color: #FFE0E0;
 }
 
 .flex-containerE{
     display: flex;
-    align-items: center;
+    align-items: top;
     justify-content: space-between;
-    height: 20vh;
+    height: 5vh;
     background-color: #FFE0E0;
 }
 
 .leaf{
-    height: 80vh;
+    height: 90vh;
 }
 
 h1{
@@ -57,6 +59,8 @@ h1{
     font-size: 15rem;
     font-weight: bold;
     padding-right: 9rem;
+    padding-bottom: none;
+    padding-top: 12%;
 }
 
 .head2{
@@ -64,12 +68,16 @@ h1{
     align-items: right;
     justify-content: space-between;
     padding-right: 10rem;
+    
 }
 
 h2{
     color: #005B99;
     font-weight: normal;
     font-size: 2rem;
+    align-items: top;
+    padding-top: 7%;
+    padding-bottom: 4rem;
 }
 
 h3{
@@ -77,26 +85,34 @@ h3{
     font-weight: bold;
     background-color: #FFE0E0;
     font-size: 2rem;
+    padding-left: 12%;
+    padding-top: 6rem;
 }
 
 .circle{
     background-color: #FFE0E0;
-    height: 0.1rem;
+    height: 1rem;
     padding-right: 11rem;
 }
 
 .subtitle{
-    background-color: #FFE0E0; 
+    background-color: #FFE0E0;
+    padding-left: 12%;
+    align-items: top;
 }
 .subtitle__content{
     color: #FFA4A4;
     background-color: #FFE0E0;
     font-weight: normal;
     font-size: 1.5rem;
+    align-items: top;
+    padding-top: 6.5rem;
     
 }
 .stanza1{    
     background-color: #FFE0E0;
+    padding-left: 12%;
+    padding-top: 2rem;
 
 }
 .stanza1__content{
@@ -106,6 +122,8 @@ h3{
 }
 .stanza2{
     background-color: #FFE0E0;
+    padding-right: 24%;
+    padding-top: 2rem;
 }
 .stanza2__content{
     color: #103269;
@@ -114,6 +132,7 @@ h3{
 }
 .stanza3{
     background-color: #FFE0E0;
+    padding-left: 12%;
 }
 .stanza3__content{
     color: #103269;
@@ -122,6 +141,8 @@ h3{
 }
 .stanza4{
     background-color: #FFE0E0;
+    padding-right: 29.5%;
+
 }
 .stanza4__content{
     color: #103269;
@@ -130,6 +151,7 @@ h3{
 }
 .stanza5{
     background-color: #FFE0E0;
+    padding-left: 12%;
 }
 .stanza5__content{
     color: #103269;
@@ -138,6 +160,7 @@ h3{
 }
 .stanza6{
     background-color: #FFE0E0;
+    padding-right: 23.5%;
 }
 .stanza6__content{
     color: #103269;
@@ -146,6 +169,9 @@ h3{
 }
 .stanza7{
     background-color: #FFE0E0;
+    padding-left: 12%;
+    padding-bottom: 4%;
+
 }
 .stanza7__content{
     color: #103269;
